--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
             <!-- adding button for bookmarks -->
             <div class="bookmark-item add-new"><i class="fa-sharp fa-solid fa-plus"></i>Add To BookMark</div>
         </div>
-        <div class="comming-soon">
-            <h3 class="comming-soon-text">Chrome extension (work in progress) comming soon . . . <span class="comming-soon-time"></span> </h3>
-        </div>
         <!-- Bookmark Modal -->
         <div class="modal">
             <div class="modal-items">
@@ -52,7 +49,7 @@
                              <input type="text" id="url-name-input" placeholder="add url" required />
                             <label for="url-input">add url here</label>
                             <input type="url" id="url-input" placeholder="add url" required />
-                            <div class="warning-text">please enter url with correct format</div>
+                            <div class="warning-text">please enter url with correct format<br/> (also include https://www )</div>
                         <button type="submit" class="add-url-btn">Add new url</button>
                     </form>
                 </modal>
